# ocgraphconf

./: Cargo.toml  Instructions.md  README.md  cli.sh  notes.md
cli/: Cargo.toml
cli/src/: main.rs
process_mining/: Cargo.toml
process_mining/src/: lib.rs  type_storage.rs
process_mining/src/oc_align/: align_case.rs  align_case_model.rs  mod.rs
process_mining/src/oc_align/test_data/bpi17/: oc_petri_net.json  shortest_case_graph.json
process_mining/src/oc_align/test_data/order_management/: deviating_case_graph.json  fitting_case_graph.json
process_mining/src/oc_align/test_data/p2p/: case_graph.json
process_mining/src/oc_align/util/: mod.rs  perm.rs  reachability_cache.rs  shortest_path_cache.rs
process_mining/src/oc_align/visualization/: case_visual.rs  mod.rs
process_mining/src/oc_case/: case.rs  dummy_ocel_1_serialization.rs  mod.rs  serialization.rs  visualization.rs
process_mining/src/oc_case/test_data/: variant_6eb2da5f3f3f7ea94ca51f1a72de8f47.jsonocel
process_mining/src/oc_petri_net/: marking.rs  mod.rs  oc_petri_net.rs
process_mining/src/oc_petri_net/heuristics/: min_events_per_object.rs  mod.rs
process_mining/src/oc_petri_net/util/: intersect_hashbag.rs  json_import.rs  mod.rs  oc_petri_net.json
