[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
process_mining = { path = "../process_mining", features = ["default", "dataframes", "graphviz-export", "ocel-sqlite"] }
graphviz-rust = { git = "https://github.com/aarkue/graphviz-rust.git" }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
simplelog = "0.12"
anyhow = "1.0.95"
wait-timeout = "0.2.1"
